--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,7 +1,7 @@
 parameters:
-    ee_embedly.embedly.embedly.class: Embedly\Embedly
+    ee_embedly.embedly.class: Embedly\Embedly
 
 services:
-    ee_embedly.example:
-        class: %ee_embedly.embedly.embedly.class%
+    embedly:
+        class: %ee_embedly.embedly.class%
 
